--- a/.github/workflows/pipeline-deploy.yml
+++ b/.github/workflows/pipeline-deploy.yml
@@ -39,7 +39,10 @@ jobs:
     steps:
     - name: Checkout
       uses: actions/checkout@v3
-
+    - name: File Env infrastructure
+      if: contains(inputs.environment_name, 'INFRASTRUCTURE')
+      run: |
+        echo "VALUES=${{ vars.inputs.environment_variable_name }}" >> $GITHUB_ENV
     - name: File Env Homologation
       if: contains(inputs.environment_variable_name, 'HOMOLOGATION_ENV')
       run: |
